ISO8583PaymentEngine/out.txt
 Downloading crates ...
  Downloaded log v0.4.29
  Downloaded windows-link v0.2.1
  Downloaded tempfile v3.27.0
  Downloaded prost-types v0.12.6
  Downloaded unicode-ident v1.0.24
  Downloaded proc-macro2 v1.0.106
  Downloaded bytes v1.11.1
  Downloaded prettyplease v0.2.37
  Downloaded regex v1.12.3
  Downloaded aho-corasick v1.1.4
  Downloaded itertools v0.12.1
  Downloaded indexmap v2.14.0
  Downloaded getrandom v0.4.2
  Downloaded tonic-build v0.10.2
  Downloaded serde_core v1.0.228
  Downloaded hashbrown v0.17.0
  Downloaded prost-build v0.12.6
  Downloaded regex-syntax v0.8.10
  Downloaded once_cell v1.21.4
  Downloaded anyhow v1.0.102
  Downloaded prost v0.12.6
  Downloaded syn v2.0.117
  Downloaded multimap v0.10.1
  Downloaded fastrand v2.4.1
  Downloaded either v1.15.0
  Downloaded quote v1.0.45
  Downloaded fixedbitset v0.4.2
  Downloaded equivalent v1.0.2
  Downloaded cfg-if v1.0.4
  Downloaded prost-derive v0.12.6
  Downloaded heck v0.5.0
  Downloaded regex-automata v0.4.14
  Downloaded petgraph v0.6.5
  Downloaded windows-sys v0.61.2
   Compiling proc-macro2 v1.0.106
   Compiling unicode-ident v1.0.24
   Compiling quote v1.0.45
   Compiling anyhow v1.0.102
   Compiling either v1.15.0
   Compiling getrandom v0.4.2
   Compiling bytes v1.11.1
   Compiling cfg-if v1.0.4
   Compiling prettyplease v0.2.37
   Compiling hashbrown v0.17.0
   Compiling equivalent v1.0.2
   Compiling regex-syntax v0.8.10
   Compiling windows-link v0.2.1
   Compiling fixedbitset v0.4.2
   Compiling once_cell v1.21.4
   Compiling fastrand v2.4.1
   Compiling itertools v0.12.1
   Compiling windows-sys v0.61.2
   Compiling heck v0.5.0
   Compiling log v0.4.29
   Compiling multimap v0.10.1
   Compiling indexmap v2.14.0
   Compiling regex-automata v0.4.14
   Compiling petgraph v0.6.5
   Compiling tempfile v3.27.0
   Compiling syn v2.0.117
   Compiling regex v1.12.3
   Compiling prost-derive v0.12.6
   Compiling prost v0.12.6
   Compiling prost-types v0.12.6
   Compiling prost-build v0.12.6
   Compiling tonic-build v0.10.2
   Compiling payment-proto v0.1.0 (D:\cob2java\GitHub\ISO8583PaymentEngine\payment-proto)
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `tonic`
 --> payment-proto\src\lib.rs:1:1
  |
1 | tonic::include_proto!("payment");
  | ^^^^^ use of unresolved module or unlinked crate `tonic`

For more information about this error, try `rustc --explain E0433`.
error: could not compile `payment-proto` (lib) due to 1 previous error
